--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,8 +10,16 @@ RUN apt-get install -y \
         libelf-dev \
         libncurses-dev \
         libssl-dev \
-        vim-tiny 
-
+        vim-tiny \
+        bindgen \
+        jfsutils \
+        reiserfsprogs \
+        xfsprogs \
+        squashfs-tools \
+        btrfs-progs \
+        pcmciautils \
+        iptables \
+        gcc
 
 #RUN ln -snf /usr/share/zoneinfo/$CONTAINER_TIMEZONE /etc/localtime && echo $CONTAINER_TIMEZONE > /etc/timezone
 
@@ -23,18 +31,22 @@ RUN apt-get install -y \
         libpci-dev \
         libiberty-dev \
         autoconf \
-        llvm \
         dwarves \
         liblz4-tool \
-        git
-        # The following are for compiling documentation
+        git \
+        fakeroot \
+        xz-utils \
+        fakeroot 
+
+# The following are for compiling documentation
 RUN apt-get install -y \
         python3 \
         python3-pip \ 
         python3-sphinx \
         texlive-xetex \
         graphviz \
-        inkscape
+        inkscape 
+
 
 RUN pip3 install rst2pdf jinja2 sphinx sphinx_rtd_theme virtualenv
 
