--- a/mtpv1/Makefile
+++ b/mtpv1/Makefile
@@ -3,7 +3,7 @@
 obj-m += mtp.o
 #MTP-y = MTP_incoming.o \
 
-MY_CFLAGS += -g
+MY_CFLAGS += -g  -DDEBUG
 ccflags-y += ${MY_CFLAGS}
 CC += ${MY_CFLAGS}
 
