--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,25 +2,31 @@
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/mtpv1",
         "${workspaceFolder}/linux-6.6.2/include",
-        "${workspaceFolder}/linux-6.6.2/include/uapi",
+        "${workspaceFolder}/linux-6.6.2/include/generated",
+        "${workspaceFolder}/linux-6.6.2/arch/x86/include",
         "${workspaceFolder}/linux-6.6.2/arch/x86/include/generated",
         "${workspaceFolder}/linux-6.6.2/arch/x86/include/generated/uapi",
-        "${workspaceFolder}/linux-6.6.2/arch/x86/include",
+        "${workspaceFolder}/linux-6.6.2/include/uapi",
         "${workspaceFolder}/linux-6.6.2/arch/x86/include/uapi"
     ],
     "C_Cpp.default.compilerPath":  "/usr/bin/gcc",
     "C_Cpp.default.intelliSenseMode": "clang-x64",
     "C_Cpp.default.defines": [
-        "__KERNEL__"
+        "KBUILD_MODNAME=\"mtp\"",
+        "__GNUC__",
+        "__KERNEL__",
+        "MODULE"
     ],
-    "C_Cpp.default.cStandard": "c89",
+    "C_Cpp.default.cStandard": "gnu99",
     "C_Cpp.default.cppStandard": "c++17",
     "C_Cpp.default.browse.path": [
         "${workspaceFolder}",
+        "${workspaceRoot}/**",
         "${workspaceFolder}/linux-6.6.2/include",
         "${workspaceFolder}/linux-6.6.2/mm",
         "${workspaceFolder}/linux-6.6.2/fs",
-        "${workspaceFolder}/linux-6.6.2/kernel"
+        "${workspaceFolder}/linux-6.6.2/kernel",
+        "${workspaceFolder}/mtpv1"
     ],
     "C_Cpp.default.browse.limitSymbolsToIncludedHeaders": true,
     "C_Cpp.default.browse.databaseFilename": ""
