--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "C_Cpp.default.includePath": [
+        "${workspaceFolder}",
         "${workspaceFolder}/mtpv1",
+        "${workspaceRoot}/linux-6.6.2/**",
         "${workspaceFolder}/linux-6.6.2/include",
         "${workspaceFolder}/linux-6.6.2/include/generated",
         "${workspaceFolder}/linux-6.6.2/arch/x86/include",
@@ -10,15 +12,15 @@
         "${workspaceFolder}/linux-6.6.2/arch/x86/include/uapi"
     ],
     "C_Cpp.default.compilerPath":  "/usr/bin/gcc",
-    "C_Cpp.default.intelliSenseMode": "clang-x64",
+    "C_Cpp.default.intelliSenseMode": "linux-gcc-x64",
     "C_Cpp.default.defines": [
         "KBUILD_MODNAME=\"mtp\"",
         "__GNUC__",
         "__KERNEL__",
         "MODULE"
     ],
-    "C_Cpp.default.cStandard": "gnu99",
-    "C_Cpp.default.cppStandard": "c++17",
+    "C_Cpp.default.cStandard": "gnu11",
+    "C_Cpp.default.cppStandard": "gnu++17",
     "C_Cpp.default.browse.path": [
         "${workspaceFolder}",
         "${workspaceRoot}/**",
@@ -29,7 +31,9 @@
         "${workspaceFolder}/mtpv1"
     ],
     "C_Cpp.default.browse.limitSymbolsToIncludedHeaders": true,
-    "C_Cpp.default.browse.databaseFilename": ""
+    "C_Cpp.default.browse.databaseFilename": "",
+    "C_Cpp.autocompleteAddParentheses": true,
+    "C_Cpp.errorSquiggles": "disabled"
 
     
 }
