--- a/mtpv1/Makefile
+++ b/mtpv1/Makefile
@@ -1,22 +1,25 @@
 # Makefile to build MTP as a Linux module.
-
-obj-m += mtp.o
-#MTP-y = MTP_incoming.o \
+ifneq ($(KERNELRELEASE),)
+# kbuild part of makefile
+include Kbuild
+echo "included"
+else
 
 MY_CFLAGS += -g  -DDEBUG
 ccflags-y += ${MY_CFLAGS}
 CC += ${MY_CFLAGS}
 
-
-KDIR ?= ../linux-6.6.2
+KDIR = /home/kerneldev/mtp/linux-6.6.2
+ 
 
 all:
-	$(MAKE) -C $(KDIR) M=$(shell pwd) modules
+	$(MAKE) -C $(KDIR) M=$(shell pwd) 
 	cp -R ../mtpv1 ../initramfs/busybox
-	/bin/bash -c "pushd ../initramfs/busybox; find . -print0 | cpio --null -ov --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
+	/bin/bash -c "pushd ../initramfs/busybox; find . -print0 | cpio --null -o --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
 	
+# make INSTALL_MOD_PATH="."  install
 install:
-	$(MAKE) -C $(KDIR) M=$(shell pwd) modules_install
+	$(MAKE) -C $(KDIR) M=$(shell pwd)   modules_install
 
 check:
 	../linux-6.6.2/scripts/kernel-doc -none *.c
@@ -27,3 +30,5 @@ clean:
 copy:
 	cp -R ../mtpv1 ../initramfs/busybox
 	/bin/bash -c "pushd ../initramfs/busybox; find . -print0 | cpio --null -ov --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
+
+endif
