--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,16 @@
   "configurations": [{
     "name": "KERNEL DEBUG",
     "type": "cppdbg",
+    "hardwareBreakpoints": {"MTP_load": "MTP_load"},
     "request": "launch",
     "program": "${workspaceFolder}/linux-6.6.2/vmlinux", // for loading symbols from running program
+    //"program": "${workspaceFolder}/mtpv1/mtp.ko", // for loading symbols from running program
     "cwd": "${workspaceFolder}",
     "preLaunchTask": "Run QEMU2",
     // if you want to connect at entry point (requires remote program to start paused)
     "stopAtEntry": true,
     "stopAtConnect": true,
-
+    "additionalSOLibSearchPath": "${workspaceFolder}/mtpv1",
     "MIMode": "gdb",
     "miDebuggerPath": "/usr/bin/gdb",
     "miDebuggerServerAddress": "localhost:1234",
@@ -19,7 +21,13 @@
       "description": "Enable pretty-printing for gdb",
       "text": "-enable-pretty-printing",
       "ignoreFailures": true,
-  }]
+      }
+    ],
+  "sourceFileMap": { "/home/kerneldev/mtp/mtpv1": "/mtpv1" }
+  
 
-}]
+}
+
+
+]
 }
