--- a/linux-6.6.2/net/Kconfig
+++ b/linux-6.6.2/net/Kconfig
@@ -238,6 +238,7 @@ source "net/bpfilter/Kconfig"
 source "net/dccp/Kconfig"
 source "net/sctp/Kconfig"
 source "net/rds/Kconfig"
+source "net/mtp/Kconfig"
 source "net/tipc/Kconfig"
 source "net/atm/Kconfig"
 source "net/l2tp/Kconfig"
