--- a/linux-6.6.2/net/Makefile
+++ b/linux-6.6.2/net/Makefile
@@ -46,6 +46,7 @@ endif
 obj-$(CONFIG_IP_DCCP)		+= dccp/
 obj-$(CONFIG_IP_SCTP)		+= sctp/
 obj-$(CONFIG_RDS)		+= rds/
+obj-$(CONFIG_MTP)		+= mtp/
 obj-$(CONFIG_WIRELESS)		+= wireless/
 obj-$(CONFIG_MAC80211)		+= mac80211/
 obj-$(CONFIG_TIPC)		+= tipc/
