--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,12 @@
     "C_Cpp.default.browse.limitSymbolsToIncludedHeaders": true,
     "C_Cpp.default.browse.databaseFilename": "",
     "C_Cpp.autocompleteAddParentheses": true,
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "mtpimpl.h": "c",
+        "bug.h": "c",
+        "inet.h": "c"
+    }
 
     
 }
