--- a/mtpapp/Makefile
+++ b/mtpapp/Makefile
@@ -1,11 +1,11 @@
 CC = gcc
-CFLAGS += -I./include -I../usr/include 
+CFLAGS += -I./include -I../usr/include # in linux-6.6.2 directory run make
 CFLAGS += -g -Wall 
 MTP_DEBUG = 1
 LDFLAGS = -static
 
 TARGET_EXEC := mtpcs
-KERNEL = 1
+#KERNEL = 1
 BUILD_DIR := ../initramfs/busybox/mtp
 SRC_DIRS := ./src
 KERNELMTPSRC := ../linux-6.6.2/net/mtp
@@ -21,7 +21,7 @@ CPPFLAGS :=  $(INC_FLAGS) -MMD -MP
 $(BUILD_DIR)/$(TARGET_EXEC): $(OBJS) # $(KERNELMTPSRCS) #Note that if the mtp folder changes in the kernel we compile kernel again and build userland (busybox)
 	$(CXX) $(OBJS) -o $@ $(LDFLAGS)
 	/bin/bash -c "pushd ../initramfs/busybox; find . -print0 | cpio --null -o --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
-	/bin/bash -c "pushd ../linux-6.6.2 && make -j$(nproc) && popd"
+#	/bin/bash -c "pushd ../linux-6.6.2 && make -j$(nproc) && popd"
 
 $(BUILD_DIR)/%.c.o: %.c
 	mkdir -p $(dir $@)
