--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,11 +12,27 @@
       }
     },
     {
-
-        "label": "Run QEMU2",
+        "label": "Run QEMU BUSYBOX X86",
         "type": "shell",
         "isBackground": true,
         "command": "echo Starting QEMU&qemu-system-x86_64 -kernel ./linux-6.6.2/arch/x86/boot/bzImage -initrd ./obj/initramfs-busybox.cpio.gz -s -S -nographic -append 'console=ttyS0 nokaslr earlycon=ttyS0 earlyprintk kgdboc.kgdboc=ttyS0'",
+        "problemMatcher": {
+            "pattern": {
+                "regexp": "^(Starting QEMU)",
+                "line": 1,
+            },
+            "background": {
+                "activeOnStart": true,
+                "beginsPattern": "^(Starting QEMU)",
+                "endsPattern": "^(Starting QEMU)"
+            }
+        }
+    },
+    {
+        "label": "Run QEMU ALPINE X86",
+        "type": "shell",
+        "isBackground": true,
+        "command": "echo Starting QEMU&&qemu-system-x86_64 -s -S -m 4096 -kernel ./linux-6.6.2/arch/x86/boot/bzImage -initrd ./obj/initramfs-alpine-x86_64.img.lz4  -boot menu=off,strict=on -drive if=none,file=hda.qcow2,format=qcow2,id=hd -device virtio-blk-pci,drive=hd -virtfs local,path=./alpine,mount_tag=host0,security_model=mapped,id=host0  -nographic -append 'nokaslr root=/dev/vda rootfstype=virtiofs root=root rw console=ttyS0 earlycon=ttyS0 earlyprintk' ",
         "problemMatcher": {
             "pattern": {
                 "regexp": "^(Starting QEMU)",
