--- a/mtpapp/Makefile
+++ b/mtpapp/Makefile
@@ -6,7 +6,13 @@ LDFLAGS = -static
 
 TARGET_MTP_EXEC := mtpcs
 
-BUILD_DIR := ../initramfs/busybox/mtp
+BUSYBOX_BUILD_DIR := ../initramfs/busybox/mtp
+ALPINE_BUILD_DIR := ../alpine-minirootfs-3.18.4-x86_64/mtp
+BUILD_DIR := $(ALPINE_BUILD_DIR)
+
+BUSYBOX_DEPLOY_SCRIPT := "pushd ../initramfs/busybox; find . -print0 | cpio --null -o --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
+ALPINE_DEPLOY_SCRIPT := "pushd ../alpine-minirootfs-3.18.4-x86_64; find . -print0 | cpio --null -o --format=newc | gzip -9 > ../obj/initramfs-alpine-x86_64.img.lz4; popd"
+
 SRC_DIRS := ./src
 KERNELMTPSRC := ../linux-6.6.2/net/mtp
 SRCS := $(shell find $(SRC_DIRS) -name '*.cpp' -or -name '*.c' -or -name '*.s')
@@ -18,10 +24,10 @@ INC_FLAGS := $(addprefix -I,$(INC_DIRS))
 CPPFLAGS :=  $(INC_FLAGS) -MMD -MP
 
 
-$(BUILD_DIR)/$(TARGET_MTP_EXEC): $(OBJS) # $(KERNELMTPSRCS) #Note that if the mtp folder changes in the kernel we compile kernel again and build userland (busybox)
+$(BUILD_DIR)/$(TARGET_MTP_EXEC): $(OBJS) 
 	$(CXX) $(OBJS) -o $@ $(LDFLAGS)
-	/bin/bash -c "pushd ../initramfs/busybox; find . -print0 | cpio --null -o --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
-#	/bin/bash -c "pushd ../linux-6.6.2 && make -j$(nproc) && popd"
+	/bin/bash -c $(BUSYBOX_DEPLOY_SCRIPT)
+	/bin/bash -c $(ALPINE_DEPLOY_SCRIPT)
 
 $(BUILD_DIR)/%.c.o: %.c
 	mkdir -p $(dir $@)
@@ -30,9 +36,6 @@ $(BUILD_DIR)/%.c.o: %.c
 $(BUILD_DIR)/%.cpp.o: %.cpp
 	mkdir -p $(dir $@)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
-
-deploy:
-	/bin/bash -c "pushd ../initramfs/busybox; find . -print0 | cpio --null -ov --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
 
 .PHONY: clean
 clean:
