--- a/rdsapp/Makefile
+++ b/rdsapp/Makefile
@@ -5,7 +5,13 @@ LDFLAGS = -static
 
 TARGET_RDS_EXEC := rds-sample
 
-BUILD_DIR := ../initramfs/busybox/rdp
+BUSYBOX_BUILD_DIR := ../initramfs/busybox/rds
+ALPINE_BUILD_DIR := ../alpine-minirootfs-3.18.4-x86_64/rds
+BUILD_DIR := $(ALPINE_BUILD_DIR)
+
+BUSYBOX_DEPLOY_SCRIPT := "pushd ../initramfs/busybox; find . -print0 | cpio --null -o --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
+ALPINE_DEPLOY_SCRIPT := "pushd ../alpine-minirootfs-3.18.4-x86_64; find . -print0 | cpio --null -o --format=newc | gzip -9 > ../obj/initramfs-alpine-x86_64.img.lz4; popd"
+
 SRC_DIRS := ./src
 SRCS := $(shell find $(SRC_DIRS) -name '*.cpp' -or -name '*.c' -or -name '*.s')
 OBJS := $(SRCS:%=$(BUILD_DIR)/%.o)
@@ -17,7 +23,8 @@ CPPFLAGS :=  $(INC_FLAGS) -MMD -MP
 
 $(BUILD_DIR)/$(TARGET_RDS_EXEC): $(OBJS) 
 	$(CXX) $(OBJS) -o $@ $(LDFLAGS)
-	/bin/bash -c "pushd ../initramfs/busybox; find . -print0 | cpio --null -o --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
+	/bin/bash -c $(BUSYBOX_DEPLOY_SCRIPT)
+	/bin/bash -c $(ALPINE_DEPLOY_SCRIPT)
 
 
 $(BUILD_DIR)/%.c.o: %.c
@@ -27,9 +34,6 @@ $(BUILD_DIR)/%.c.o: %.c
 $(BUILD_DIR)/%.cpp.o: %.cpp
 	mkdir -p $(dir $@)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
-
-deploy:
-	/bin/bash -c "pushd ../initramfs/busybox; find . -print0 | cpio --null -ov --format=newc | gzip -9 > ../../obj/initramfs-busybox.cpio.gz; popd"
 
 .PHONY: clean
 clean:
