bios changed to UEFI

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,7 +32,7 @@
         "label": "Run QEMU ALPINE X86",
         "type": "shell",
         "isBackground": true,
-        "command": "echo Starting QEMU&&qemu-system-x86_64 -s -S -m 4096 -kernel ./linux-6.6.2/arch/x86/boot/bzImage -initrd ./obj/initramfs-alpine-x86_64.img.lz4  -boot menu=off,strict=on -drive if=none,file=hda.qcow2,format=qcow2,id=hd -device virtio-blk-pci,drive=hd -virtfs local,path=./alpine,mount_tag=host0,security_model=mapped,id=host0  -nographic -append 'nokaslr root=/dev/vda rootfstype=virtiofs root=root rw console=ttyS0 earlycon=ttyS0 earlyprintk' ",
+        "command": "echo Starting QEMU&&qemu-system-x86_64 -machine type=pc-q35-6.0,accel=kvm  -enable-kvm -smp sockets=1,cpus=4,cores=4 -cpu host -bios OVMF.fd -drive file=OVMF_CODE.fd,if=pflash,format=raw,unit=0,readonly=on -device virtio-rng-pci -s -S -m 4G -kernel ./linux-6.6.2/arch/x86/boot/bzImage -initrd ./obj/initramfs-alpine-x86_64.img.lz4  -boot menu=off,strict=on -drive if=none,file=hda.qcow2,format=qcow2,id=hd -device virtio-blk-pci,drive=hd -virtfs local,path=./alpine,mount_tag=host0,security_model=mapped,id=host0  -nographic -append 'nokaslr root=/dev/vda rootfstype=virtiofs root=root rw console=ttyS0 earlycon=ttyS0 earlyprintk' ",
         "problemMatcher": {
             "pattern": {
                 "regexp": "^(Starting QEMU)",
