--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "Enable ifconfig extension": false,
         "Enable viewcode extension": false,
         "Enable githubpages extension": false
-    }
+    },
+    "esbonio.sphinx.confDir": ""
 
 }
